Tristan added initial models and modified a few templates based on updates to models

--- a/simpleworkout/workout/templates/workout/history.html
+++ b/simpleworkout/workout/templates/workout/history.html
@@ -16,7 +16,7 @@
             </tr>
             <tr>
                 <td class="col-sm-2">{{workout.date}}</td>
-                <td class="col-sm-2">{{workout.type}}</td>
+                <td class="col-sm-2">{{workout.category}}</td>
                 <td class="col-sm-5">{{workout.detail}}</td>
                 <td class="col-sm-3">{{workout.notes}}</td>
             </tr>
