--- a/simpleworkout/workout/templates/workout/preferences.html
+++ b/simpleworkout/workout/templates/workout/preferences.html
@@ -7,17 +7,17 @@
 {% block content %}
     <form method="put">
         <select multiple class="form-control" name="equipment">
-          <option>Barbell</option>
-          <option>24kg Kettlebells</option>
-          <option>16kg Kettlebells</option>
-          <option>Pullup Bar</option>
-          <option>Airdyne</option>
+          
+          {% for equipment in equipments %}
+          <option>{{equipment.item}}</option>
+          {% endfor %}
+
         </select>
 
         <label class="control-label">Percentage Occurrence</label>
-        <input type="text" class="form-control" placeholder="Cardio" name="cardio">
-        <input type="text" class="form-control" placeholder="Strength" name="strength">
-        <input type="text" class="form-control" placeholder="Circuit" name="circuit">
+        {% for category in categories %}
+        <input type="text" class="form-control" placeholder="{{category.category}}" name="{{category.category}}">
+        {% endfor %}
 
         <button type="submit" class="btn btn-default">Submit Preferences</button>
     </form>
