Tristan updated views to show all except preferences for default user (tristan)

--- a/simpleworkout/workout/templates/workout/about.html
+++ b/simpleworkout/workout/templates/workout/about.html
@@ -5,19 +5,21 @@
 {% endblock %}
 
 {% block content %}
-    <ul>
-        <li>Cardiovascular work should be done at least three times a week for a solid 20-60 minutes straight. Aim for an average intensity of a 3 or 4 on the RPE scale of 1-10. Variety, variety, variety!</li>
+    <div class="col-sm-9">
+        <ul>
+            <li>Cardiovascular work should be done at least three times a week for a solid 20-60 minutes straight. Aim for an average intensity of a 3 or 4 on the RPE scale of 1-10. Variety, variety, variety!</li>
 
-        <li>Strength and flexibility work should be modeled towards the full squat and overhead press. Some form of pulling like rowing or pullups should be included for push / pull balance. Variations of these movements are completely fine and helpful to adjust for equipment limitations and boredom.</li>
+            <li>Strength and flexibility work should be modeled towards the full squat and overhead press. Some form of pulling like rowing or pullups should be included for push / pull balance. Variations of these movements are completely fine and helpful to adjust for equipment limitations and boredom.</li>
 
-        <li>Repetition ranges are typically categorized as the following: 1-5RM which offers heavy neural strength and bone density improvement but is harder on the joints; 5-8RM which offers a very good fall-back range for strength and growth; 8-12RM which eases stress from the connective tissue and begins to enter muscular endurance while providing good overall growth; 12-15RM moves more into muscular endurance; 15-20RM is good for backing off of any significant weight while allowing practice of movements and even further muscular endurance; 20RM+ is reserved for testing things for fun</li>
+            <li>Repetition ranges are typically categorized as the following: 1-5RM which offers heavy neural strength and bone density improvement but is harder on the joints; 5-8RM which offers a very good fall-back range for strength and growth; 8-12RM which eases stress from the connective tissue and begins to enter muscular endurance while providing good overall growth; 12-15RM moves more into muscular endurance; 15-20RM is good for backing off of any significant weight while allowing practice of movements and even further muscular endurance; 20RM+ is reserved for testing things for fun</li>
 
-        <li>Rest time between sets of 1-8 should be high (2-5 minutes) whereas sets of 12+ should have short rest times (30-120 seconds)</li>
+            <li>Rest time between sets of 1-8 should be high (2-5 minutes) whereas sets of 12+ should have short rest times (30-120 seconds)</li>
 
-        <li>Progressive overload is very important. The 1-8 range should rely on increases in weight used while the 12+ range should increase overall volume or decrease rest time. Sets of 8-12 can progress well through either.</li>
+            <li>Progressive overload is very important. The 1-8 range should rely on increases in weight used while the 12+ range should increase overall volume or decrease rest time. Sets of 8-12 can progress well through either.</li>
 
-        <li>Working all of the different ranges is important to keep training helpful for the goal here: general health and fitness. Alternating the focus on different ranges is encouraged and allows for a lot of variety in the program.</li>
+            <li>Working all of the different ranges is important to keep training helpful for the goal here: general health and fitness. Alternating the focus on different ranges is encouraged and allows for a lot of variety in the program.</li>
 
-        <li>When a range isn’t being focused on, it should at least be maintained. Don’t ignore a range for longer than a month.</li>
-    </ul>
+            <li>When a range isn’t being focused on, it should at least be maintained. Don’t ignore a range for longer than a month.</li>
+        </ul>
+    </div>
 {% endblock %}
