--- a/simpleworkout/workout/templates/workout/history.html
+++ b/simpleworkout/workout/templates/workout/history.html
@@ -16,7 +16,7 @@
 
         {% for log in logs %}
         <tr>
-            <td class="col-sm-2">{{log.date}}</td>
+            <td class="col-sm-2">{{log.date.date}}</td>
             <td class="col-sm-2">{{log.workout.category}}</td>
             <td class="col-sm-5">{{log.workout.detail}}</td>
             <td class="col-sm-3">{{log.notes}}</td>
