--- a/simpleworkout/workout/templates/workout/new.html
+++ b/simpleworkout/workout/templates/workout/new.html
@@ -5,16 +5,18 @@
 {% endblock %}
 
 {% block content %}
-    <form method="put">
-        
-        <select class="form-control" name="category">
-            {% for category in categories %}
-            <option>category</option>
-            {% endfor %}
-        </select>
+    <div class="col-sm-8">
+        <form method="put">
+            
+            <select class="form-control" name="category">
+                {% for category in categories %}
+                <option>{{category}}</option>
+                {% endfor %}
+            </select>
 
-        <textarea class="form-control" rows="6" name="detail"></textarea>
+            <textarea class="form-control" rows="6" name="detail"></textarea>
 
-        <div><button type="submit" class="btn btn-default">Add New</button></div>
-    </form>
+            <div><button type="submit" class="btn btn-default">Add New</button></div>
+        </form>
+    </div>
 {% endblock %}
