--- a/simpleworkout/workout/templates/workout/workout.html
+++ b/simpleworkout/workout/templates/workout/workout.html
@@ -6,13 +6,21 @@
 
 {% block content %}
     {% if workout %}
-        {{workout.detail}}
         <br>
+        <p>{{workout.detail}}</p>
+        <br><br>
         <div class="row">
             <div class="col-sm-2"><a href="#"><button type="button" class="btn btn-success">Completed</button></a></div>
             <div class="col-sm-2"><a href="#"><button type="button" class="btn btn-danger">Reject</button></a></div>
             <div class="col-sm-2"><a href="#"><button type="button" class="btn btn-info">Rest Day</button></a></div>
         </div>
+    {% elif log %}
+        <p>Tomorrow's workout will appear at midnight!</p>
+        <hr>
+        <p>Today you already completed:</p>
+        {{log.workout.detail}}
+        <p>Notes:</p>
+        {{log.notes}}
     {% else %}
         <p>Tomorrow's workout will appear at midnight!</p>
     {% endif %}
