Tristan added basic preferences view

--- a/simpleworkout/workout/templates/workout/base_template.html
+++ b/simpleworkout/workout/templates/workout/base_template.html
@@ -17,7 +17,7 @@
                 <li><a href="{% url 'workout:main' %}">Workout</a></li>
                 <li><a href="{% url 'workout:history' %}">History</a></li>
                 <li><a href="{% url 'workout:new' %}">Add New</a></li>
-                <li><a href="#">Preferences</a></li>
+                <li><a href="{% url 'workout:preferences' %}">Preferences</a></li>
                 <li><a href="{% url 'workout:about' %}">About</a></li>
             </ul>
         </div>
