Tristan added NotesForm for adding notes to completed workouts; modified workout.html template to include this ability to add notes; altered views.py to accommodate POST requests

--- a/simpleworkout/workout/templates/workout/new.html
+++ b/simpleworkout/workout/templates/workout/new.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div class="col-sm-8">
-        <form method="put">
+        <form method="post">
             
             <select class="form-control" name="category">
                 {% for category in categories %}
