--- a/simpleworkout/workout/templates/workout/preferences.html
+++ b/simpleworkout/workout/templates/workout/preferences.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div class="col-sm-3">
-        <form method="put">
+        <form method="post">
         <br>
         <label class="control-label">Equipment You Own</label>
         <select multiple class="form-control" name="equipment">
