Tristan updated templates and added basic form to add New Workouts; need to modify this to update the view and to use bootstrap in the template

--- a/simpleworkout/workout/templates/workout/workout.html
+++ b/simpleworkout/workout/templates/workout/workout.html
@@ -11,8 +11,7 @@
         <br><br>
         {% if not addnotes %}
             <div class="row">
-                <form method="post" id="completed">
-                    {% csrf_token %}
+                <form method="post" id="completed">{% csrf_token %}
                     <div class="col-sm-2"><input type="submit" class="btn btn-success" name="completed" value="Completed"></div>
                     <!--<div class="col-sm-2"><a href="#"><button type="button" class="btn btn-danger">Reject</button></a></div>-->
                     <div class="col-sm-2"><input type="submit" class="btn btn-info" name="rest" value="Rest Day"></div>
@@ -35,8 +34,7 @@
         <br><br>
         <label class="control-label">Notes</label>
         <div class="row">
-            <form method="post">
-                {% csrf_token %}
+            <form method="post">{% csrf_token %}
                 <div class="col-sm-4"><textarea class="form-control" rows="3" name="notes"></textarea></div>
                 <br>
                 <div class="col-sm-2"><input type="submit" class="btn btn-success" name="noted" value="Add Notes"></div>
