--- a/simpleworkout/workout/templates/workout/new.html
+++ b/simpleworkout/workout/templates/workout/new.html
@@ -6,15 +6,16 @@
 
 {% block content %}
     <div class="col-sm-8">
-        <form method="post">
-            
-            <select class="form-control" name="category">
+        <form method="post">{% csrf_token %}
+
+            <!--<select class="form-control" name="category">
                 {% for category in categories %}
                 <option>{{category}}</option>
                 {% endfor %}
             </select>
 
-            <textarea class="form-control" rows="6" name="detail"></textarea>
+            <textarea class="form-control" rows="6" name="detail"></textarea>-->
+            {{ form.as_p }}
 
             <div><button type="submit" class="btn btn-default">Add New</button></div>
         </form>
