--- a/simpleworkout/workout/templates/workout/about.html
+++ b/simpleworkout/workout/templates/workout/about.html
@@ -5,21 +5,39 @@
 {% endblock %}
 
 {% block content %}
-    <div class="col-sm-9">
+    <br>
+    <div class="col-sm-6">
+        <h4>My History</h4>
+        <p>
+            I dabbled with many forms of exercise during high school and lifted a bit in college. During my senior year, I found CrossFit, which opened my eyes to many different aspects of fitness that I had never seen before. Through my CrossFit years, I became very serious about Olympic weightlifting, power lifting, and energy system training, each of which I focused on more heavily during various parts of six years.
+        </p>
+        <p>
+            After pondering the return I was getting on the time I spent in the gym, I decided that I would rather shift my purpose in training from a focus on performance to a focus on longevity. In the end, isn't this why we work out?
+        </p>
+        <p>
+            In my mind, this decision serves three purposes. The first is that high volumes of training (particularly strength training) had previuosly increased my hunger to levels that required nearly 5000 calories daily. Not only did this cause me to think of food almost non-stop, it also consisted of unhealthy eating practices.
+        </p>
+        <p>
+            This leads into the second purpose of this decision, which is to establish a lifetime of healthy eating practices. By being less focused on training, I can better focus on my nutrition and improve the quality of the foods that I consume.
+        </p>
+        <p>
+            Third, serious training takes serious time. I was spending roughly two hours in the gym each day quite often, but by shifting my training focus to longevity, I can spend more time on other aspects of life.
+        </p>
+    </div>
+    <div class="col-sm-6">
+        <h4>Methodology</h4>
+        <p>
+            In early 2013, I read an <a href="http://www.eatmoveimprove.com/2011/12/training-for-general-health-and-longevity-qa/">article</a> at Eat Move Improve regarding training for general health and longevity. I generally agree with the principles enumerated there, which I will summarize here as the basis for my current training:
+        </p>
         <ul>
-            <li>Cardiovascular work should be done at least three times a week for a solid 20-60 minutes straight. Aim for an average intensity of a 3 or 4 on the RPE scale of 1-10. Variety, variety, variety!</li>
+            <li>Cardiovascular work at 3+ times per week for a solid 20-60 minutes straight, with an average intensity of a 3 or 4 on the RPE scale of 1-10</li>
 
-            <li>Strength and flexibility work should be modeled towards the full squat and overhead press. Some form of pulling like rowing or pullups should be included for push / pull balance. Variations of these movements are completely fine and helpful to adjust for equipment limitations and boredom.</li>
+            <li>Strength and flexibility work should be modeled towards the full squat and overhead press</li>
 
-            <li>Repetition ranges are typically categorized as the following: 1-5RM which offers heavy neural strength and bone density improvement but is harder on the joints; 5-8RM which offers a very good fall-back range for strength and growth; 8-12RM which eases stress from the connective tissue and begins to enter muscular endurance while providing good overall growth; 12-15RM moves more into muscular endurance; 15-20RM is good for backing off of any significant weight while allowing practice of movements and even further muscular endurance; 20RM+ is reserved for testing things for fun</li>
-
-            <li>Rest time between sets of 1-8 should be high (2-5 minutes) whereas sets of 12+ should have short rest times (30-120 seconds)</li>
-
-            <li>Progressive overload is very important. The 1-8 range should rely on increases in weight used while the 12+ range should increase overall volume or decrease rest time. Sets of 8-12 can progress well through either.</li>
-
-            <li>Working all of the different ranges is important to keep training helpful for the goal here: general health and fitness. Alternating the focus on different ranges is encouraged and allows for a lot of variety in the program.</li>
-
-            <li>When a range isn’t being focused on, it should at least be maintained. Don’t ignore a range for longer than a month.</li>
+            <li>Some form of pulling like rowing or pullups should be included for push/pull balance</li>
         </ul>
+        <p>
+            With this in mind, I plan to make good use of my airdyne, 24kg kettlebells, pullup bar, and running for as long as I can. I will typically do lifts with kettlebells in the range of 8-12 reps, with roughly 2 minutes rest between sets. My rough plan is to do cardio every other day, with strength and circuits alternating between those days. When it gets nicer outside, I might substitute tennis, hiking, or other activities for some of the days.
+        </p>
     </div>
 {% endblock %}
