--- a/simpleworkout/workout/templates/workout/base_template.html
+++ b/simpleworkout/workout/templates/workout/base_template.html
@@ -10,15 +10,20 @@
     </head>
 
     <body>
-        <h1 class="col-sm-7">{% block header %}{% endblock %}</h1>
+        <h1 class="col-sm-6">{% block header %}{% endblock %}</h1>
         
-        <div class="col-sm-5 text-right">
+        <div class="col-sm-6 text-right">
             <ul class="list-inline">
                 <li><a href="{% url 'workout:main' %}">Workout</a></li>
                 <li><a href="{% url 'workout:history' %}">History</a></li>
                 <li><a href="{% url 'workout:new' %}">Add New</a></li>
                 <li><a href="{% url 'workout:preferences' %}">Preferences</a></li>
                 <li><a href="{% url 'workout:about' %}">About</a></li>
+                {% if user.is_anonymous %}
+                    <li><a href="{% url 'workout:login' %}?next={% firstof request.path 'workout:main' %}">Login</a></li>
+                {% else %}
+                    <li>{{user.username}} <a href="{% url 'workout:logout' %}?next={% firstof request.path 'workout:main' %}">(Logout)</a></li>
+                {% endif %}
             </ul>
         </div>
         
