--- a/simpleworkout/workout/templates/workout/login.html
+++ b/simpleworkout/workout/templates/workout/login.html
@@ -3,16 +3,16 @@
 {% load bootstrap3 %}
 
 {% block header %}
-    {% block title %}Add New Workout{% endblock %}
+    {% block title %}Login{% endblock %}
 {% endblock %}
 
 {% block content %}
     <br>
-    <div class="col-sm-6">
+    <div class="col-sm-4">
         <form method="post" class="form">
             {% csrf_token %}
             {% bootstrap_form form %}
-            <div><button type="submit" class="btn btn-default">Add New</button></div>
+            <div><button type="submit" class="btn btn-default">Login</button></div>
         </form>
     </div>
 {% endblock %}
