--- a/simpleworkout/workout/templates/workout/login.html
+++ b/simpleworkout/workout/templates/workout/login.html
@@ -7,6 +7,9 @@
 {% endblock %}
 
 {% block content %}
+    {% if loginerror %}
+        <p class="text-danger">You must enter proper login information.</p>
+    {% endif %}
     <br>
     <div class="col-sm-4">
         <form method="post" class="form">
