--- a/simpleworkout/workout/templates/workout/preferences.html
+++ b/simpleworkout/workout/templates/workout/preferences.html
@@ -1,39 +1,26 @@
 {% extends 'workout/base_template.html' %}
 
+{% load bootstrap3 %}
+
 {% block header %}
     {% block title %}Preferences{% endblock %}
 {% endblock %}
 
 {% block content %}
+    {% if anonerror %}
+        <p class="text-danger">You must be logged in to update preferences.</p>
+    {% endif %}
     <div class="col-sm-3">
-        <form method="post">
-        <br>
-        <label class="control-label">Equipment You Own</label>
-        <select multiple class="form-control" name="equipment">
-                  
-        {% for ownership in ownerships %}
-            <option>{{ownership.equipment.item}}</option>
-        {% endfor %}
-
-        </select>
-
-        <br>
-
-        <label class="control-label">Desired Days Per Week</label>
-        <br>
-        {% for preference in preferences %}
-            <div class="row">
-                <div class="col-sm-4 text-right">{{preference.category.category}}</div>
-                <div class="col-sm-3">
-                    <input type="text" class="form-control" placeholder="{{preference.category.category}}" value="{{preference.days_per_week}}">
-                </div>
+        <form method="post" class="form">
+            {% csrf_token %}
+            {% bootstrap_form equipment_form %}
             <br>
-            </div>
-        {% endfor %}
-
-        <br>
-
-        <button type="submit" class="btn btn-default">Submit Preferences</button>
+            {% if dayserror %}
+                <p class="text-danger">Invalid days per week.</p>
+            {% endif %}
+            {% bootstrap_form preference_form %}
+            <br>
+            <div><button type="submit" class="btn btn-default">Submit Preferences</button></div>
         </form>
     </div>
 {% endblock %}
