Tristan added handling for carriage returns in workout detail fields and vertically centered text in the history table

--- a/simpleworkout/workout/templates/workout/added.html
+++ b/simpleworkout/workout/templates/workout/added.html
@@ -16,7 +16,7 @@
         <br>
         <br>
         <h5>Submitted Workout Details:</h5>
-        {{workout.detail}}
+        {{workout.detail|linebreaks}}
     {% elif preferences %}
         <p>Thank you for updating your preferences!</p>
         <br>
