--- a/simpleworkout/workout/templates/workout/workout.html
+++ b/simpleworkout/workout/templates/workout/workout.html
@@ -11,7 +11,7 @@
 
     {% if workout %}
         <br>
-        <p>{{workout.detail}}</p>
+        <p>{{workout.detail|linebreaks}}</p>
         <br><br>
         {% if not addnotes %}
             <div class="row">
@@ -26,7 +26,7 @@
         <p>Tomorrow's workout will appear at midnight!</p>
         <hr>
         <p>Today you already completed:</p>
-        {{log.workout.detail}}
+        {{log.workout.detail|linebreaks}}
         <hr>
         <p>Notes:</p>
         {{log.notes}}
